aws-eks-kube-manifest/car-rental-backend.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: car-rental-backend #nameofdeployment
spec:
  replicas: 1
  selector: 
    matchLabels:
      app: car-rental-backend #matchlabelforpod
  template: 
    metadata:
      labels: 
        app: car-rental-backend #labelforpod
    spec: 
      containers:
        - name: car-rental-backend-container
          image: 010526277866.dkr.ecr.us-east-1.amazonaws.com/car-rental-backend:latest
          ports:
            - containerPort: 4000 #default-port-pgadmin
---
apiVersion: v1
kind: Service
metadata:
  name: car-rental-backend-service
spec:
  type: ClusterIP
  selector:
    app: car-rental-backend #labelofpodsshouldmatch
  ports:
    - protocol: TCP
      port: 4000
      targetPort: 4000
