aws-eks-kube-manifest/car-rental-frontend.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: car-rental-frontend #nameofdeployment
spec:
  replicas: 1
  selector: 
    matchLabels:
      app: car-rental-frontend #matchlabelforpod
  template: 
    metadata:
      labels: 
        app: car-rental-frontend #labelforpod
    spec: 
      containers:
        - name: nginx-reverse-proxy-container
          image: your-nginx-image  # Docker image with Nginx reverse proxy
          ports:
            - containerPort: 80  # Exposes port 80 for reverse proxy
        - name: car-rental-frontend-container
          image: 
          ports:
            - containerPort: 3000 
---
apiVersion: v1
kind: Service
metadata:
  name: car-rental-frontend-service
spec:
  type: NodePort #if you dont mention this type then default will be main ClusterIP
  selector:
    app: car-rental-frontend #labelofpodsshouldmatch
  ports:
    - protocol: TCP
      port: 80 #serviceport
      targetPort: 80 #containerPort from pod yml  
      nodePort: 32400 #(default range is 30000-32767)
