aws-eks-kube-manifest/rds-postgres-external-nameservice.yml
apiVersion: v1
kind: Service
metadata:
  name: rds-postgres-external-service
spec:
  type: ExternalName
  externalName: rds-car-rental.cr2a444ug1c4.us-east-2.rds.amazonaws.com #rds-postgress is the rds name
